style/app.css
/* ... */
dl::before {
  content: '';
  display: flex;
  width: 100%;
  height: .1rem;
  margin: 4.8rem 0;
  background: var(--light-25);
}

dl > div + div {
  margin-top: calc( 1.8rem * 1.5 );
}

dt {
  font-size: 1.4rem;
  color: var(--light-50);
  line-height: calc( 1.8rem * 1.5 );
}

.main nav {
  display: flex;
  margin: 9.6rem auto;
  color: var(--light-50);
}

.main nav span.button {
  margin-left: -2.4rem;
  cursor: default;
}

@media( min-width: 800px ) {

  .main {
    /* padding-right: calc( 50vw + 2.4rem ); */
  }

}



/* search */

input,
input[type=text],
input[type=search],
label,
button,
fieldset {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
	margin:0;
	border:0;
  border-radius: 0;
	padding:0;
	display:inline-block;
	vertical-align:middle;
	white-space:normal;
	background:none;
	line-height: 1.5;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
}

input[type=search]::-ms-clear {
  display: none;
  width: 0;
  height: 0;
}

input[type=search]::-ms-reveal {
  display: none;
  width : 0;
  height: 0;
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

form {
  background: var(--light-100);
  border-radius: 1.6rem 1.6rem 0 0;
  min-width: 32rem;
  width: 100%;
  max-width: 37.5rem;
  overflow: hidden;
  pointer-events: all;
  box-shadow: 0 0 4.8rem var(--dark-100);
}

form > * {
  width: 100%;
  max-width: 100%;
}

fieldset {
  min-width: 0;
  width: 100%;
}

input:focus,
input[type=text]:focus,
input[type=search]:focus,
button {
	outline:0;
}

::-webkit-search-decoration {
	display:none;
}

.search {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  pointer-events: none;
  z-index: 2;
}

.search .suggestions {
  /* display: none; */
}

.suggestions button {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  height: 6.4rem;
  padding: .8rem 2.4rem;
  font-size: 1.4rem;
}

.suggestions button span {
  display: flex;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  pointer-events: none;
}

.suggestions button span + span {
  color: var(--dark-50);
}

.input,
.geolocation {
  height: 6.4rem;
  width: 100%;
}

.input {
  position: relative;
  display: flex;
}

.input label {
  position: relative;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  width: 100%;
  padding: 0 0 0 2.4rem;
}

.input label > div {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  pointer-events: none;
}

.input label input {
  width: calc( 100% - 6.4rem );
  height: 100%;
  caret-color: var(--highlight);
}

.input label .line::before {
  content: '';
  display: flex;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
  transform: scaleX( 0 );
  transform-origin: left;
  background: var(--highlight);
}

.input label input:focus + div .line::before {
  transform: scaleX( 1 );
}

.input label .line {
  position: absolute;
  width: calc( 100% - 4.8rem );
  height: .2rem;
  background: var(--dark-100);
  right: 2.4rem;
  left: 2.4rem;
  bottom: -.1rem;
}

.input .icon,
.input button {
  position: absolute;
  height: 6.4rem;
  min-width: 6.4rem;
  display: flex;
  justify-content: center;
  align-items: center;
  top: 0;
  right: 0;
  bottom: 0;
  flex-shrink: 0;
  color: var(--dark-50);
}

.input button {
  pointer-events: all
}

.input .icon {
  display: none;
}

.input label input:placeholder-shown + div .icon {
  display: flex;
}

.input label input:placeholder-shown + div button {
  display: none;
}

.geolocation .material-icons {
  font-size: 1.6rem;
}

.geolocation button {
  justify-content: flex-start;
  width: 100%;
}

.geolocation button:hover {
  color: var(--highlight);
}

.app[data-geolocation="false"] .geolocation button {
  display: none;
}



/* story */

#map {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.mapboxgl-ctrl.mapboxgl-ctrl-attrib {
  background: transparent;
}

.mapboxgl-ctrl-attrib a {
  color: var(--light-50);
}

.story {
  background: var(--dark-100);
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: none;
  z-index: 3;
}

.app[data-page="story"] .story {
  display: flex;
}

.story article,
.story .canvas {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
}

.story nav {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 6.4rem;
  z-index: 2;
}

.story nav button {
  color: var(--light-100);
}

.button.share {
  background: var(--highlight);
  height: 4rem;
  overflow: hidden;
  border-radius: 2.4rem;
}

.steps-container {
  display: flex;
  flex-direction: column;
  position: absolute;
  width: 100%;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0 auto;
  padding: 2rem;
  z-index: 3;
  pointer-events: none;
}

.controls {
  pointer-events: all;
}

.steps {
  position: relative;
  background: var(--light-100);
  width: 100%;
  max-width: 37.5rem;
  border-radius: .8rem;
  pointer-events: all;
}

.steps p {
  color: var(--dark-50);
}

.swiper-container-horizontal > .swiper-pagination-progressbar {
  bottom: 0;
  top: unset;
  height: .8rem;
  border-radius: 0 0 .8rem .8rem;
  overflow: hidden;
  background: var(--dark-25);
}

.swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
  background: var(--highlight);
}

.swiper-slide {
  padding: 3.6rem 2rem 2.6rem;
}
/* ... */

